--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+
+[profile.dev]
+opt-level = "z"
+strip = true  # Automatically strip symbols from the binary.
+lto = true
