--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "rok-page"
+name = "awesome"
 version = "0.1.0"
-authors = ["S.C. Lorentz <felipe.lorentz@outlook.com.br>"]
+authors = ["S.C. Lorentz <113468900+SCLorentz@users.noreply.github.com>"]
 edition = "2018"
 
 [lib]
